# multiagent-system

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  PROJECT_CONTEXT.md  README.md  main.py  pyproject.toml  test_game.py
multiagent_system/: __init__.py  game_controller.py  main.py
multiagent_system/agents/: __init__.py  guessing_agent.py  main_agent.py  thinking_agent.py
multiagent_system/tools/: __init__.py
tests/: __init__.py
